2007-12-27  Ævar Arnfjörð Bjarmason  <avar@cpan.org>

	* Plugin.(xs|h): Fix up prototypes to match the callbacks in the actual 5.10 release

2007-05-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.03)

	* Plugin.xs: The exec callback would call_sv on a NULL value
	  causing a segfault
	* Plugin.pod: Use %hash ~~ 'i' instead of $hash{i}, more stylish!
	* inc: Bumping Module::Install to 0.65

2007-05-17 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.02)

	* Brought up to date with current blead after lots of hacking on
	  blead itself, too many changes to list

2007-02-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.01)

	* Initial release