@@ -5,7 +5,7 @@ Test the C<stash> method
 =cut
 
 use strict;
-use Test::More tests => 4;
+use Test::More tests => 5;
 
 use re::engine::Plugin (
     comp => sub {
@@ -19,6 +19,8 @@ use re::engine::Plugin (
         my ($re, $str) = @_;
 
         my $stash = $re->stash;
+        my $ret = $re->stash( $stash );
+        ok(!$ret, "stash returns no value on assignment");
         my %h = qw( 0 a 1 o 2 e 3 u );
         for (keys %h) {
             is($h{$_}, $stash->[$_]);
